<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

  <VideoView
      android:id="@+id/mediathumb"
      android:layout_width="0dp"
      app:layout_constraintVertical_bias="0"
      android:layout_height="200dp"
      android:layout_margin="16dp"
      app:layout_constraintBottom_toTopOf="@+id/pickVideo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <VideoView
      android:id="@+id/videoview"
      android:layout_width="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"
      app:layout_constraintTop_toBottomOf="@+id/mediathumb"
      android:layout_height="200dp"/>

  <Button
      android:id="@+id/pickVideo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/pick_video"
      app:layout_constraintEnd_toStartOf="@+id/transcodeNow"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/videoview"
      />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtWidth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:hint="@string/video_width"
      app:layout_constraintEnd_toStartOf="@+id/edtHeight"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progress"
      />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtHeight"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:hint="@string/video_height"
      app:layout_constraintEnd_toStartOf="@+id/edtBitRate"
      app:layout_constraintStart_toEndOf="@+id/edtWidth"
      app:layout_constraintTop_toBottomOf="@+id/progress"
      />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtBitRate"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:hint="@string/video_bitrate"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/edtHeight"
      app:layout_constraintTop_toBottomOf="@+id/progress"
      />

  <Button
      android:id="@+id/btnStop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/stop_trans"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/transcodeNow"
      app:layout_constraintTop_toBottomOf="@+id/videoview"
      />

  <Button
      android:id="@+id/transcodeNow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/transcode_now"
      app:layout_constraintEnd_toStartOf="@+id/btnStop"
      app:layout_constraintStart_toEndOf="@+id/pickVideo"
      app:layout_constraintTop_toBottomOf="@+id/videoview"
      />

  <ProgressBar
      android:id="@+id/progress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/transcodeNow"
      style="@style/Widget.AppCompat.ProgressBar.Horizontal"
      />


</androidx.constraintlayout.widget.ConstraintLayout>